WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272944
REGRESSION (
277669@main
): [ MacOS iOS ] imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-form-controls-crash.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=272944
Summary
REGRESSION (277669@main): [ MacOS iOS ] imported/w3c/web-platform-tests/css/c...
Jay Stfleur
Reported
2024-04-18 17:31:14 PDT
Description: imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-form-controls-crash.html Is a consistent crash on Monterey+ Wk1 & Wk2 Debug, test is also crashing on iOS Debug. Buildbot URl:
https://build.webkit.org/#/builders/934/builds/2376
History:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-contain%2Fcontent-visibility%2Fcontent-visibility-form-controls-crash.html&style=debug
Diff/Image Diff/Crash Log: No crash log found for com.apple.WebKit.WebContent.Development:74532. stdout: stderr: SHOULD NEVER BE REACHED /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp(1121) : bool WebCore::LayoutIntegration::LineLayout::updateTextContent(const RenderText &, size_t, int) com.apple.WebKit.WebContent.Development terminated (pid 74532) for reason: crash LEAK: 1 WebPageProxy
Attachments
Patch
(6.86 KB, patch)
2024-04-18 20:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.68 KB, patch)
2024-04-20 15:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(2.71 KB, patch)
2024-04-20 15:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.30 KB, patch)
2024-04-20 21:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-18 17:31:38 PDT
<
rdar://problem/126722146
>
EWS
Comment 2
2024-04-18 17:49:42 PDT
Test gardening commit
277716@main
(ac5c0ed2e710): <
https://commits.webkit.org/277716@main
> Reviewed commits have been landed. Closing PR #27489 and removing active labels.
alan
Comment 3
2024-04-18 20:47:37 PDT
Created
attachment 471000
[details]
Patch
alan
Comment 4
2024-04-20 15:02:10 PDT
Created
attachment 471026
[details]
Patch
alan
Comment 5
2024-04-20 15:38:11 PDT
Created
attachment 471027
[details]
Patch
alan
Comment 6
2024-04-20 21:38:06 PDT
Created
attachment 471028
[details]
[fast-cq]Patch
EWS
Comment 7
2024-04-21 05:33:06 PDT
Committed
277791@main
(66ae15226092): <
https://commits.webkit.org/277791@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471028
[details]
.
EWS
Comment 8
2024-04-23 13:36:31 PDT
Test gardening commit
277887@main
(dca6ec38e14d): <
https://commits.webkit.org/277887@main
> Reviewed commits have been landed. Closing PR #27649 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug