REGRESSION (277669@main): [ MacOS iOS ] imported/w3c/web-platform-tests/css/css-contain/content-visibility/content-visibility-form-controls-crash.html is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=272944 <rdar://126722146>

Reviewed by Antti Koivisto.

Only invalidate LineLayout when text content actually changes.

* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::setText):
(WebCore::RenderText::setTextWithOffset):

Canonical link: https://commits.webkit.org/277791@main